--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+     <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
@@ -23,7 +24,6 @@
       <div class="card-footer text-muted">
       </div>
     </div>
-    <a href="#" style="display: block; text-align: center;">Create new tiny url</a>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
