--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,6 +22,12 @@
         </p>
       </div>
       <div class="card-footer text-muted">
+        <h4>Edit</h4>
+        <form method="POST" action="/urls/<%= id %>/update">
+          <label for="updated-url">New URL:</label>
+          <input type="text" name="updatedURL" placeholder="https://">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
     </div>
     <!-- Bootstrap JS -->
