--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,14 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form method="POST" action="/login" class="row float-right">
+          <div class="col-auto">
+            <input type="text" name="username" class="form-control">
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-outline-dark">Login</button>
+          </div>
+        </form>
       </div>
     </div>
   </nav>
