create cookie in login post route

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,12 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <% if(username) { %>
+        <p>Logged in as <%= username %></p>
+        <form method="POST" action="/logout">
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+        </form>
+        <% } else {%> 
         <form method="POST" action="/login" class="row float-right">
           <div class="col-auto">
             <input type="text" name="username" class="form-control">
@@ -24,6 +30,7 @@
             <button type="submit" class="btn btn-outline-dark">Login</button>
           </div>
         </form>
+        <% } %>
       </div>
     </div>
   </nav>
