--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,20 +13,24 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      <div class="navbar-nav justify-content-between" style="width: 100%; padding-right: 20px">
+        <div class="row">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </div>
         <% if(username) { %>
-        <p>Logged in as <%= username %></p>
-        <form method="POST" action="/logout">
-          <button type="submit" class="btn btn-outline-dark">Logout</button>
-        </form>
+          <div class="row" style="align-items: center;">
+            <p class="col-auto" style="align-items: center; margin-bottom: 0;">Logged in as <%= username %></p>
+            <form method="POST" action="/logout">
+              <button type="submit" class="btn btn-outline-dark">Logout</button>
+            </form>
+          </div>
         <% } else {%> 
-        <form method="POST" action="/login" class="row float-right">
-          <div class="col-auto">
+        <form method="POST" action="/login" class="row" style="gap: 10px">
+          <div>
             <input type="text" name="username" class="form-control">
           </div>
-          <div class="col-auto">
+          <div >
             <button type="submit" class="btn btn-outline-dark">Login</button>
           </div>
         </form>
