--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,7 @@
   <body>
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
-      <form method="POST" action="/register">
+      <form method="POST" action="/register" style="width: 90%; max-width: 500px; margin: auto">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1">
