--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,9 @@
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         </div>
-        <% if(username) { %>
+        <% if(user) { %>
           <div class="row" style="align-items: center;">
-            <p class="col-auto" style="align-items: center; margin-bottom: 0;">Logged in as <%= username %></p>
+            <p class="col-auto" style="align-items: center; margin-bottom: 0;">Logged in as <%= user.email %></p>
             <form method="POST" action="/logout">
               <button type="submit" class="btn btn-outline-dark">Logout</button>
             </form>
