--- a/views/error.ejs
+++ b/views/error.ejs
@@ -16,36 +16,23 @@
     />
 
     <style>
-      .register-form {
-        width: 90%;
-        max-width: 500px;
-        padding: 20px;
-        margin: 100px auto;
-        box-shadow: 4px 4px 15px -7px;
-        border-radius: 10px;
-      }
-      .register-form__legend {
-        margin-bottom: 20px;
+      main {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        justify-content: center;
+        align-items: center;
+        height: 50vh;
       }
     </style>
 
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include('partials/_header') %>
-    <main style="margin: 1em;"> 
-      <form method="POST" action="/register" class="register-form">
-        <legend class="register-form__legend">Create Account</legend>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" name="email">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+    <main style="margin: 1em;">
+      <h1>Error (<%= errorCode %>)</h1>
+      <h4><%= errorMessage %></h4>
+      <a href="/urls">Back to TinyApp home page</a>
     </main>
     <!-- Bootstrap JS -->
     <script
