--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -15,6 +15,21 @@
       crossorigin="anonymous"
     />
 
+    <style>
+      .create-form {
+        width: 90%;
+        max-width: 500px;
+        padding: 20px;
+        margin: 100px auto;
+        box-shadow: 4px 4px 15px -7px;
+        border-radius: 10px;
+
+      }
+      .create-form__legend {
+        margin-bottom: 20px;
+      }
+    </style>
+
     <title>New URL - TinyApp Example</title>
   </head>
 
@@ -22,8 +37,8 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <form class="create-form" action="/urls" method="POST">
+        <legend class="create-form__legend">Create TinyURL</legend>
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
           <input
@@ -31,10 +46,9 @@
             type="text"
             name="longURL"
             placeholder="http://"
-            style="width: 300px; margin: 1em"
           />
-          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
