install 'bcryptjs', hash passwords before storing

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -46,6 +46,7 @@
             type="text"
             name="longURL"
             placeholder="http://"
+            required
           />
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
