--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,6 +14,13 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
+
+    <style>
+      .centered {
+        text-align: center;
+      }
+    </style>
+
     <title>TinyApp</title>
   </head>
   <body>
@@ -26,8 +33,8 @@
             <tr>
               <th scope="col">Short URL ID</th>
               <th scope="col">Long URL</th>
-              <th scope="col">Edit</th>
-              <th scope="col">Delete</th>
+              <th scope="col" class="centered">Edit</th>
+              <th scope="col" class="centered">Delete</th>
             </tr>
           </thead>
           <tbody>
@@ -35,19 +42,22 @@
               <tr>
                 <td><%= id %></td>
                 <td><%= urls[id].longURL %></td>
-                <td>
+                <td class="centered">
                   <a href="./urls/<%= id %>"  class="btn btn-outline-primary">Edit</a>
                 </td>
-                <td>
+                <td class="centered">
                   <form method="POST" action="/urls/<%= id %>/delete">
                     <button type="submit" class="btn btn-outline-danger">Delete</button>
                   </form>
                 </td>
-
+                
               </tr>
-            <% } %>
-          </tbody>
-        </table>
+              <% } %>
+            </tbody>
+          </table>
+          <% if(urlKeys.length === 0) { %>
+            <h4>You have not created any urls yet</h4> 
+          <% } %>
       <% } else { %> 
           <h2>Please login to view your URLs</h2>
         <% } %>
