--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,7 @@
       </div>
       <div class="card-footer text-muted">
         <h4>Edit</h4>
-        <form method="POST" action="/urls/<%= id %>/update">
+        <form method="POST" action="/urls/<%= id %>">
           <label for="updated-url">New URL:</label>
           <input type="text" name="updatedURL" placeholder="https://">
           <button type="submit" class="btn btn-primary">Submit</button>
